sort.dutchflag.lessons.sort.dutchflag.DutchFlagAlgo.scala.error
DutchFlagAlgo:7: error: value =< is not a member of Int
    if (getCouleur(i)==ROUGE && i=<avantRouge) {
                                 ^